--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /*Global*/
 :root {
   --dark-blue: #363F5F;
+  --green: #49AA26;
+  --light-green: #3dd705;
+  --red: #e92929;
 }
 
 * {
@@ -9,9 +12,25 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 93.75%;
+}
+
 body {
   background: #F0F2F5;
   font-family: 'Poppins', sans-serif;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .container {
@@ -28,6 +47,64 @@ h2 {
   font-weight: 400;
 }
 
+/* Links and buttons --- */
+
+a {
+  color: var(--green);
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3DD705;
+}
+
+.button.new {
+  display: inline-block;
+  margin: .9rem 0 0.8rem;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+
+  border: none;
+  color: white;
+  background: var(--green);
+
+  border-radius: 0.25rem;
+  cursor: pointer;
+
+  padding: 0;
+
+  transition: 300ms;
+}
+
+button:hover {
+  background: var(--light-green);
+  transition: 300ms;
+}
+
+.button.cancel {
+  color: var(--red);
+  border: 2px var(--red) solid;
+  border-radius: 0.25rem;
+
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.6;
+  
+  transition: 300ms;
+}
+
+.button.cancel:hover {
+  opacity: 1;
+  transition: 300ms;
+}
+
 /* Header --- */
 header {
   background: #2D4A22;
@@ -42,7 +119,7 @@ header {
 
 /*Balance --- */
 #balance {
-  margin-top: -8rem;
+  margin-top: -6rem;
 }
 
 #balance h2 {
@@ -56,7 +133,6 @@ header {
   padding: 1.5rem 2rem;
   
   border-radius: 0.25rem;
-
   margin-bottom: 2rem;
   
   color: var(--dark-blue);
@@ -65,6 +141,10 @@ header {
 .card h3 {
   font-weight: normal;
   font-size: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -75,24 +155,37 @@ header {
 }
 
 .card.total {
-  background: #39AA26;
+  background: var(--green);
   color: white;
 }
 
 /* Table --- */
+#transaction {
+  width: 100%;
+  display: block;
+  overflow-x: auto; 
+
+}
+
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
 
   color: #969CB3;
+
 }
 
 table thead tr th:first-child, 
 table tbody tr td:first-child  {
-  border-radius: 0.5rem 0 0 0.25rem;
+  border-radius: 0.25rem 0 0 0.25rem;
 }
 
-table th {
+table thead tr th:last-child, 
+table tbody tr td:last-child  {
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+
+table thead th {
   background: white;
 
   font-weight: normal;
@@ -128,6 +221,75 @@ td.expense {
   color: #e92929;
 }
 
+/* Modal --- */
+.modal-overlay {
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 9, 0, 0.7);
+
+  position: fixed;
+  top: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  visibility: hidden;
+
+  z-index: 999;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background-color: #F0F2F5;
+  padding: 2.4rem;
+
+  position: relative;
+  z-index: 1;
+}
+
+/* Form --- */
+#form {
+  max-width: 500px;
+}
+
+#form h2 {
+  margin-top: 0;
+}
+
+input {
+  border:none;
+  border-radius: .2rem;
+
+  padding: 0.8rem;
+
+  width: 100%;
+}
+
+.input-group {
+  margin-top: 0.8rem;
+}
+
+.input-group small {
+  opacity: 0.4;
+}
+
+.input-group.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+  width: 48%;
+}
 
 /* Footer --- */
 
@@ -136,4 +298,17 @@ footer {
   padding: 4rem 0 2rem;
   color: var(--dark-blue);
   opacity: 0.6;
+}
+
+/* Responsive --- */
+@media (min-width: 800px) {
+  html {
+    font-size: 87.5%;
+  }
+  
+  #balance {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
