--- a/style.css
+++ b/style.css
@@ -62,13 +62,31 @@ a:hover {
 }
 
 .button.new {
-  display: inline-block;
+  display: flex;
   margin: .9rem 0 0.8rem;
+
+  align-items: center;
+  justify-content: center;
+
+  border: 2px var(--green) solid;
+
+  width: 13rem;
+  height: 4rem;
+  border-radius: 1rem;
+  transition: 300ms;
+}
+
+.button.new:hover {
+  background-color: #F0F2F4;
+  border: 2px #3DD705 solid;
+  transition: 300ms;
 }
 
 button {
   width: 100%;
   height: 50px;
+
+  margin-top: .5rem;
 
   border: none;
   color: white;
@@ -167,7 +185,6 @@ header {
   width: 100%;
   display: block;
   overflow-x: auto; 
-
 }
 
 #data-table {
@@ -241,6 +258,8 @@ td.expense {
   opacity: 0;
   visibility: hidden;
 
+  transition: 300ms;
+
   z-index: 999;
 }
 
@@ -283,17 +302,6 @@ input {
   opacity: 0.4;
 }
 
-.input-group.actions {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.input-group.actions .button,
-.input-group.actions button {
-  width: 48%;
-}
-
 /* Footer --- */
 
 footer {
@@ -313,5 +321,24 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+  }
+
+  .button.new {
+    border: none;
+  }
+  .button.new:hover {
+    border: none;
+    font-size: 1.05rem;
+  }
+  
+  .input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .input-group.actions .button,
+  .input-group.actions button {
+    width: 48%;
   }
 }
